docs(sdks): note the JVM flag the Arrow Flight SQL JDBC driver needs on JDK 24+